# PowerSocial

./: .gitignore  CONTEXT.md  README.md  index.html  package-lock.json  package.json  tsconfig.json
.github/workflows/: build.yml
src/: App.tsx  api.ts  index.css  types.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: downloader.rs  history.rs  lib.rs  main.rs
src/components/: GalleryCard.tsx  JobsPanel.tsx  PlatformLogo.tsx  Titlebar.tsx  VideoEditor.tsx
src/components/ui/: badge.tsx  button.tsx  checkbox.tsx  dropdown-menu.tsx  select.tsx
